src/parserHandler/qtlSolverParser.java
// $ANTLR 3.5 qtlSolver.g 2013-05-20 14:51:23

package parserHandler;

import java.util.HashMap;
import delegateTranslator.*;
import formulae.*;
import formulae.QTL.*;
import formulae.QTLI.*;
import formulae.MITL.*;
import formulae.MITLI.*;
import java.io.FileOutputStream;
import java.io.OutputStream;
import java.io.PrintStream;
import java.io.FileNotFoundException;
import java.util.Collections;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class qtlSolverParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND_OP", "ATOM", "COLON", "COMMENT", 
		"FALSE", "F_OP", "F_inf_OP", "G_OP", "G_inf_OP", "H_OP", "ID", "IFF_OP", 
		"IMPL_OP", "INT", "LBRA", "LOGIC", "LPAR", "NEG_OP", "NEWLINE", "OR_OP", 
		"P_OP", "RBRA", "RELEASE_OP", "RPAR", "SEMI", "SINCE_OP", "TRIGGER_OP", 
		"TRUE", "UNTIL_OP", "WS", "':bound'", "':def'", "':formula'"
	};
	public static final int EOF=-1;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int AND_OP=4;
	public static final int ATOM=5;
	public static final int COLON=6;
	public static final int COMMENT=7;
	public static final int FALSE=8;
	public static final int F_OP=9;
	public static final int F_inf_OP=10;
	public static final int G_OP=11;
	public static final int G_inf_OP=12;
	public static final int H_OP=13;
	public static final int ID=14;
	public static final int IFF_OP=15;
	public static final int IMPL_OP=16;
	public static final int INT=17;
	public static final int LBRA=18;
	public static final int LOGIC=19;
	public static final int LPAR=20;
	public static final int NEG_OP=21;
	public static final int NEWLINE=22;
	public static final int OR_OP=23;
	public static final int P_OP=24;
	public static final int RBRA=25;
	public static final int RELEASE_OP=26;
	public static final int RPAR=27;
	public static final int SEMI=28;
	public static final int SINCE_OP=29;
	public static final int TRIGGER_OP=30;
	public static final int TRUE=31;
	public static final int UNTIL_OP=32;
	public static final int WS=33;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public qtlSolverParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public qtlSolverParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return qtlSolverParser.tokenNames; }
	@Override public String getGrammarFileName() { return "qtlSolver.g"; }


	/** Map variable name to Integer object holding value */
	HashMap<String, Formula> memory = new HashMap<String,Formula>();

	TLParserHandler p;
	String tlogic;



	// $ANTLR start "tlparser"
	// qtlSolver.g:33:1: tlparser : l= logic NEWLINE ':bound' INT NEWLINE ( declaration )* ':formula' fmla NEWLINE ;
	public final void tlparser() throws RecognitionException {
		Token INT1=null;
		String l =null;
		Formula fmla2 =null;

		try {
			// qtlSolver.g:33:9: (l= logic NEWLINE ':bound' INT NEWLINE ( declaration )* ':formula' fmla NEWLINE )
			// qtlSolver.g:33:11: l= logic NEWLINE ':bound' INT NEWLINE ( declaration )* ':formula' fmla NEWLINE
			{
			pushFollow(FOLLOW_logic_in_tlparser35);
			l=logic();
			state._fsp--;

			match(input,NEWLINE,FOLLOW_NEWLINE_in_tlparser37); 
			 
							tlogic = l;
							if (tlogic.equals("qtl"))
								p = new QTLParserHandler();
							else if (tlogic.equals("qtl-i"))
								p = new QTLIParserHandler();
							else if (tlogic.equals("mitl"))
								p = new MITLParserHandler();
							else if (tlogic.equals("mitl-i"))
								p = new MITLIParserHandler();				 
					 	
			match(input,34,FOLLOW_34_in_tlparser48); 
			INT1=(Token)match(input,INT,FOLLOW_INT_in_tlparser50); 
			match(input,NEWLINE,FOLLOW_NEWLINE_in_tlparser52); 

							p.setHistoryLength(Integer.valueOf((INT1!=null?INT1.getText():null)));
							System.out.println("Starting parsing formulae...");
						
			// qtlSolver.g:50:4: ( declaration )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==NEWLINE||LA1_0==35) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// qtlSolver.g:50:4: declaration
					{
					pushFollow(FOLLOW_declaration_in_tlparser62);
					declaration();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			match(input,36,FOLLOW_36_in_tlparser68); 
			pushFollow(FOLLOW_fmla_in_tlparser70);
			fmla2=fmla();
			state._fsp--;

							
						
								
							p.setCLTLTranslator(CLTLTranslatorEnum.AE2ZOT);
							
							
							FileOutputStream f0 = null;
							
							try {
								f0 = new FileOutputStream("output.cltl");
							} catch (FileNotFoundException e) {
								e.printStackTrace();
							}
							
							if (f0 != null){
								PrintStream prn = new PrintStream(f0);		
								prn.println(p.translate(fmla2, CLTLTranslatorEnum.AE2ZOT));
							}
							else
								System.out.println("Opps...some errors occurred!");					
						
			match(input,NEWLINE,FOLLOW_NEWLINE_in_tlparser77); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "tlparser"



	// $ANTLR start "logic"
	// qtlSolver.g:75:1: logic returns [String s] : COLON LOGIC ;
	public final String logic() throws RecognitionException {
		String s = null;


		Token LOGIC3=null;

		try {
			// qtlSolver.g:76:2: ( COLON LOGIC )
			// qtlSolver.g:76:4: COLON LOGIC
			{
			match(input,COLON,FOLLOW_COLON_in_logic92); 
			LOGIC3=(Token)match(input,LOGIC,FOLLOW_LOGIC_in_logic94); 
			 s = new String((LOGIC3!=null?LOGIC3.getText():null)); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "logic"



	// $ANTLR start "declaration"
	// qtlSolver.g:79:1: declaration : ( ':def' s= ID fmla NEWLINE | NEWLINE );
	public final void declaration() throws RecognitionException {
		Token s=null;
		Formula fmla4 =null;

		try {
			// qtlSolver.g:79:12: ( ':def' s= ID fmla NEWLINE | NEWLINE )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==35) ) {
				alt2=1;
			}
			else if ( (LA2_0==NEWLINE) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// qtlSolver.g:79:14: ':def' s= ID fmla NEWLINE
					{
					match(input,35,FOLLOW_35_in_declaration108); 
					s=(Token)match(input,ID,FOLLOW_ID_in_declaration112); 
					pushFollow(FOLLOW_fmla_in_declaration118);
					fmla4=fmla();
					state._fsp--;


								 	if (memory.containsKey((s!=null?s.getText():null)))
										emitErrorMessage("warning: duplicate name formula! " + (s!=null?s.getText():null) + " was already defined.");		
									else
								 		memory.put((s!=null?s.getText():null), fmla4);
								 
					match(input,NEWLINE,FOLLOW_NEWLINE_in_declaration131); 
					}
					break;
				case 2 :
					// qtlSolver.g:88:5: NEWLINE
					{
					match(input,NEWLINE,FOLLOW_NEWLINE_in_declaration137); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declaration"



	// $ANTLR start "fmla"
	// qtlSolver.g:91:1: fmla returns [Formula r] : ( LPAR in_fmla= fmla RPAR | TRUE | FALSE | ID | LPAR NEG_OP f1= fmla RPAR | LPAR AND_OP clist= conjuncts_list RPAR | LPAR OR_OP clist= conjuncts_list RPAR | LPAR IMPL_OP f1= fmla f2= fmla RPAR | LPAR IFF_OP f1= fmla f2= fmla RPAR | LPAR F_OP a= INT b= INT f1= fmla RPAR | LPAR F_inf_OP a= INT f1= fmla RPAR | LPAR op= G_OP a= INT b= INT f1= fmla RPAR | LPAR op= G_inf_OP a= INT f1= fmla RPAR | LPAR P_OP a= INT b= INT f1= fmla RPAR | LPAR H_OP a= INT b= INT f1= fmla RPAR | LPAR UNTIL_OP f1= fmla f2= fmla RPAR | LPAR SINCE_OP f1= fmla f2= fmla RPAR | LPAR RELEASE_OP f1= fmla f2= fmla RPAR | LPAR TRIGGER_OP f1= fmla f2= fmla RPAR );
	public final Formula fmla() throws RecognitionException {
		Formula r = null;


		Token a=null;
		Token b=null;
		Token op=null;
		Token ID5=null;
		Token F_OP6=null;
		Token F_inf_OP7=null;
		Token P_OP8=null;
		Token H_OP9=null;
		Formula in_fmla =null;
		Formula f1 =null;
		List<Formula> clist =null;
		Formula f2 =null;

		try {
			// qtlSolver.g:92:2: ( LPAR in_fmla= fmla RPAR | TRUE | FALSE | ID | LPAR NEG_OP f1= fmla RPAR | LPAR AND_OP clist= conjuncts_list RPAR | LPAR OR_OP clist= conjuncts_list RPAR | LPAR IMPL_OP f1= fmla f2= fmla RPAR | LPAR IFF_OP f1= fmla f2= fmla RPAR | LPAR F_OP a= INT b= INT f1= fmla RPAR | LPAR F_inf_OP a= INT f1= fmla RPAR | LPAR op= G_OP a= INT b= INT f1= fmla RPAR | LPAR op= G_inf_OP a= INT f1= fmla RPAR | LPAR P_OP a= INT b= INT f1= fmla RPAR | LPAR H_OP a= INT b= INT f1= fmla RPAR | LPAR UNTIL_OP f1= fmla f2= fmla RPAR | LPAR SINCE_OP f1= fmla f2= fmla RPAR | LPAR RELEASE_OP f1= fmla f2= fmla RPAR | LPAR TRIGGER_OP f1= fmla f2= fmla RPAR )
			int alt3=19;
			switch ( input.LA(1) ) {
			case LPAR:
				{
				switch ( input.LA(2) ) {
				case NEG_OP:
					{
					alt3=5;
					}
					break;
				case AND_OP:
					{
					alt3=6;
					}
					break;
				case OR_OP:
					{
					alt3=7;
					}
					break;
				case IMPL_OP:
					{
					alt3=8;
					}
					break;
				case IFF_OP:
					{
					alt3=9;
					}
					break;
				case F_OP:
					{
					alt3=10;
					}
					break;
				case F_inf_OP:
					{
					alt3=11;
					}
					break;
				case G_OP:
					{
					alt3=12;
					}
					break;
				case G_inf_OP:
					{
					alt3=13;
					}
					break;
				case P_OP:
					{
					alt3=14;
					}
					break;
				case H_OP:
					{
					alt3=15;
					}
					break;
				case UNTIL_OP:
					{
					alt3=16;
					}
					break;
				case SINCE_OP:
					{
					alt3=17;
					}
					break;
				case RELEASE_OP:
					{
					alt3=18;
					}
					break;
				case TRIGGER_OP:
					{
					alt3=19;
					}
					break;
				case FALSE:
				case ID:
				case LPAR:
				case TRUE:
					{
					alt3=1;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			case TRUE:
				{
				alt3=2;
				}
				break;
			case FALSE:
				{
				alt3=3;
				}
				break;
			case ID:
				{
				alt3=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// qtlSolver.g:92:6: LPAR in_fmla= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla161); 
					pushFollow(FOLLOW_fmla_in_fmla165);
					in_fmla=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla167); 

								r = in_fmla;
							
					}
					break;
				case 2 :
					// qtlSolver.g:96:4: TRUE
					{
					match(input,TRUE,FOLLOW_TRUE_in_fmla176); 

								Formula f = null;
								if (tlogic.equals("qtl"))	
									f = new QTLTrue();
								else if (tlogic.equals("qtl-i"))
									f = new QTLITrue();
								else if (tlogic.equals("mitl"))
									f = new MITLTrue();
								else if (tlogic.equals("mitl-i"))
									f = new MITLITrue();
									
								r = p.addFormula(f);
							
					}
					break;
				case 3 :
					// qtlSolver.g:110:4: FALSE
					{
					match(input,FALSE,FOLLOW_FALSE_in_fmla185); 

								Formula f = null;
								if (tlogic.equals("qtl"))	
									f = new QTLFalse();
								else if (tlogic.equals("qtl-i"))
									f = new QTLIFalse();
								else if (tlogic.equals("mitl"))
									f = new MITLFalse();
								else if (tlogic.equals("mitl-i"))
									f = new MITLIFalse();
									
								r = p.addFormula(f);
							
					}
					break;
				case 4 :
					// qtlSolver.g:124:6: ID
					{
					ID5=(Token)match(input,ID,FOLLOW_ID_in_fmla196); 
						
								if (memory.containsKey((ID5!=null?ID5.getText():null))){
									r = memory.get((ID5!=null?ID5.getText():null));					
								}
								else{
									Formula f = null;
									if (tlogic.equals("qtl"))	
										f = new QTLAtom((ID5!=null?ID5.getText():null));
									else if (tlogic.equals("qtl-i"))
										f = new QTLIAtom((ID5!=null?ID5.getText():null));
									else if (tlogic.equals("mitl"))
										f = new MITLAtom((ID5!=null?ID5.getText():null));
									else if (tlogic.equals("mitl-i"))
										f = new MITLIAtom((ID5!=null?ID5.getText():null));
									
									r = p.addFormula(f);
								}
							
					}
					break;
				case 5 :
					// qtlSolver.g:143:4: LPAR NEG_OP f1= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla207); 
					match(input,NEG_OP,FOLLOW_NEG_OP_in_fmla209); 
					pushFollow(FOLLOW_fmla_in_fmla213);
					f1=fmla();
					state._fsp--;
